k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: app-python.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moscow-time-python-service
                port:
                  number: 8000
    - host: app-rust.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moscow-time-rust-service
                port:
                  number: 8001
